# pyShroffCelegansModels

./: .gitignore  README.md  pixi.toml  pyproject.toml  setup_julia_env.py  test_julia.py
brie/: lineage strain compiler.ipynb  timepoint_compare.py
src/celegans_model/: __init__.py  base.py  celegans_model.py  constants.py  julia_celegans_model.py
src/celegans_model/python_celegans_model/: __init__.py  compute_central_spline.py  cubic_spline_3d.py  dist_to_spline.py  python_celegans_model.py
tests/: __init__.py  test_celegans_model.py  test_celegans_model_interface.py  test_julia_celegans_model.py  test_python_celegans_model.py
