[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
[tool.hatch.build.targets.wheel]
packages = ["src/celegans_model"]
[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "celegans-model"
description = "Python code for accessing and visalizing the twisted and untwisted celegans model"
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "malinmayorc@janelia.hhmi.org", name = "Funke Lab" },
]
version="v0.0.1_alpha"
dependencies = [
  "finn-viewer @ git+https://github.com/funkelab/finn.git@celegans",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 90
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "E",    # style errors
    "F",    # flakes
    "I001", # isort
    "U",    # pyupgrade
    "S",    # bandit
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
ignore = [
  "S311",   # random numbers for cryptography
  "S101",   # asserts not allowed
  "E731",   # don't define lambdas
  "B028",   # explicit stack level on warn
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
